# scienthesis-lithub

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: a001_initial_lithub_schema.py
src/: __init__.py  main.py
src/api/v1/: __init__.py  folders.py  internal.py  library.py  papers.py
src/core/: __init__.py  config.py  database.py  deps.py  exceptions.py  logging.py  middleware.py  redis.py  security.py
src/models/: __init__.py  base.py  folder.py  library_entry.py  paper.py
src/repositories/: folder_repo.py  library_repo.py  paper_repo.py
src/schemas/: internal.py  library.py
src/services/: library_service.py
tests/: conftest.py  fakes.py  test_endpoints.py  test_library_service.py
